WIP add conference adhoc
